[gd_scene load_steps=4 format=3 uid="uid://8h8k8gw8mkph"]

[ext_resource type="Script" path="res://scripts/level_ui.gd" id="1_mu2s0"]
[ext_resource type="Texture2D" uid="uid://j40gt7lkkqp8" path="res://assets/NatureIcon.png" id="2_x317g"]

[sub_resource type="Theme" id="Theme_iydsi"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_mu2s0")

[node name="ProgressBar" type="ProgressBar" parent="."]
modulate = Color(0, 0.882353, 0.0745098, 1)
top_level = true
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -316.0
offset_top = 20.0
offset_right = 316.0
offset_bottom = 58.0
grow_horizontal = 2
value = 10.0
rounded = true

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_left = 20.0
offset_top = 20.0
offset_right = 115.0
offset_bottom = 58.0
size_flags_horizontal = 3
color = Color(0, 0, 0, 0.34902)

[node name="NaturePoints" type="HBoxContainer" parent="ColorRect"]
layout_mode = 1
anchors_preset = -1
offset_right = 89.0
offset_bottom = 38.0
theme = SubResource("Theme_iydsi")

[node name="NatureIcon" type="TextureRect" parent="ColorRect/NaturePoints"]
layout_mode = 2
texture = ExtResource("2_x317g")
expand_mode = 3

[node name="NaturePointsAmount" type="Label" parent="ColorRect/NaturePoints"]
layout_mode = 2
text = "100"

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 487.0
offset_top = 557.0
offset_right = 625.0
offset_bottom = 588.0
grow_horizontal = 2
grow_vertical = 0

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer"]
layout_mode = 2

[node name="PrimalOakButton" type="Button" parent="PanelContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "Cost 100"
focus_neighbor_right = NodePath("../OakButton")
focus_next = NodePath("../OakButton")
mouse_force_pass_scroll_events = false
text = "Primal Oak"

[node name="OakButton" type="Button" parent="PanelContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "Cost 10"
focus_neighbor_left = NodePath(".")
focus_previous = NodePath(".")
text = "Oak"

[connection signal="pressed" from="PanelContainer/HBoxContainer/PrimalOakButton" to="." method="_on_primal_oak_button_pressed"]
[connection signal="pressed" from="PanelContainer/HBoxContainer/OakButton" to="." method="_on_oak_button_pressed"]
